--- a/index.html
+++ b/index.html
@@ -600,22 +600,14 @@
                         <div class="span6">
                             <h1>Wat is bioresonantie therapie?</h1>
                             <p>
-                               Wetenschappelijk is vastgesteld dat DNA gevoelig 
-                               is voor laagfrequente elektromagnetische velden. Bioresonantie maakt gebruik van de elektro-magnetische trillingen van de mens zelf.
-                               Bij zieken wordt het trillingsbeeld verstoord door trillingen van bijvoorbeeld bacteriën of pesticiden. Deze ziekmakende of ziekelijke trillingen zijn disharmonisch. Met bioresonantie wordt de harmonie in het lichaam weer hersteld door de ziekmakende trillingen op te sporen en hier weer helende trillingen voor terug te sturen.       
+                                Wetenschappelijk is vastgesteld dat DNA gevoelig is voor laagfrequente elektromagnetische velden. Bioresonantie maakt gebruik van de elektromagnetische trillingen van de mens zelf. Bij mensen die ziek zijn wordt het trillingsbeeld verstoord door trillingen van bijvoorbeeld bacteriën of pesticiden. Deze ziekmakende of ziekelijke trillingen zijn disharmonisch. Door middel van bioresonantie wordt de harmonie in het lichaam weer hersteld. Dit gebeurt door ziekmakende trillingen op te sporen en hier helende trillingen voor terug te sturen.
                             </p>
                             <p>
-                               Het is pijnloze ervaring zonder bijwerkingen met als doel het inzichtelijk maken van de staat waarin uw lichaam en geest zich bevinden en 
-                               vervolgens beiden weer in hun natuurlijk staat terug te brengen. 
+                                De behandeling is pijnloos en zonder bijwerkingen. Het heeft als doel het inzichtelijk maken van de staat waarin uw lichaam en geest zich bevinden om vervolgens beiden weer in hun natuurlijke staat terug te brengen.
                             </p>
                             <p>
-                                Bioresonantie therapie kent verschillende onderdelen. Ten eerste wordt het probleem opgespoord door middel van een scan. Hiermee kan uw gehele lichamelijke en emotionele staat worden onderzocht. Er wordt onder andere gekeken naar belasting van virussen, 
-                                parasieten en bacteriën die uw gezondheid beïnvloeden. Of er een disbalans is met betrekking tot vitaminen, mineralen en zware metalen. Hoe de staat van uw aura is en of er bepaalde emoties in disbalans zijn. 
-                                Vervolgens wordt er gekeken wat de beste manier is om deze disbalans te corrigeren. Met  bioresonantie frequenties, druppels, voeding, of andere adviezen die toepasselijk zijn in uw situatie.
-                            
+                                Bioresonantietherapie kent verschillende onderdelen. Eerst wordt het probleem opgespoord door middel van een scan. Hiermee kan uw gehele lichamelijke en emotionele staat worden onderzocht. Er wordt onder andere gekeken naar belasting van virussen, parasieten en bacteriën die uw gezondheid beïnvloeden. Daarnaast wordt gekeken of er een disbalans is met betrekking tot vitaminen, mineralen en zware metalen, hoe de staat van uw aura is en of er bepaalde emoties uit evenwicht zijn. Vervolgens wordt er gekeken wat de beste manier is om deze disbalans te corrigeren. Dit gebeurt door middel van bioresonantie-frequenties, druppels, voeding en eventueel andere adviezen die van toepassing zijn in uw situatie.
                             </p>
-                            </p>  
-                            
                         </div>
                         <div class="span6">
                             <img src="images/bioresonantie.jpg">
