--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
                             <p>
 
                             </p>
-                            <a class="btn btn-landing btn-large" href="mailto:hello@bm-insight.com">Maak vandaag nog een afspraak </a>              </div>
+                            <a class="btn btn-landing btn-large" href="mailto:info@emolio.nl">Maak vandaag nog een afspraak </a>              </div>
 
                     </div>
                     <br />
@@ -988,7 +988,7 @@
                         </div>
                         <ul class="inline social margintop20">
 
-                            <li><a href="mailto:vital@energeticbubble.com">vital@energeticbubble.com</a></li>
+                            <li><a href="mailto:info@emolio.nl">info@emolio.nl</a></li>
                             <!--<li><i class="icon-twitter"></i></li>
                             <li><i class="icon-linkedin"></i></li>-->
                         </ul>
