--- a/bioresonancebook/index.html
+++ b/bioresonancebook/index.html
@@ -19,6 +19,14 @@
             -ms-user-select: none; /* IE10+/Edge */
             user-select: none; /* Standard */
         }
+        #pdf-viewer {
+            width: 100%;
+            overflow: auto;
+        }
+        canvas {
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -51,7 +59,14 @@
                     <!-- Options will be populated dynamically -->
                 </select>
             </div>
-            <div id="pdf-viewer"></div>
+            <div id="pdf-controls" class="mb-3 d-flex justify-content-between align-items-center">
+                <button id="prev-page" class="btn btn-primary">Previous</button>
+                <span>Page: <span id="page-num"></span> / <span id="page-count"></span></span>
+                <button id="next-page" class="btn btn-primary">Next</button>
+                <input type="number" id="page-input" class="form-control ml-2" style="width: 80px;" min="1" placeholder="Page">
+                <button id="go-to-page" class="btn btn-secondary ml-2">Go</button>
+            </div>
+            <div id="pdf-viewer" class="border"></div>
         </div>
     </div>
     <script>
@@ -188,29 +203,84 @@
             });
         }
 
-        // Function to load PDF
-        function loadPDF(url) {
-            var loadingTask = pdfjsLib.getDocument(url);
-            loadingTask.promise.then(function(pdf) {
-                pdf.getPage(1).then(function(page) {
-                    var scale = 1.5;
-                    var viewport = page.getViewport({ scale: scale });
+        let pdfDoc = null,
+            pageNum = 1,
+            pageRendering = false,
+            pageNumPending = null,
+            scale = 1.5,
+            canvas = document.createElement('canvas'),
+            ctx = canvas.getContext('2d');
 
-                    var canvas = document.createElement('canvas');
-                    var context = canvas.getContext('2d');
-                    canvas.height = viewport.height;
-                    canvas.width = viewport.width;
+        document.getElementById('pdf-viewer').appendChild(canvas);
 
-                    var renderContext = {
-                        canvasContext: context,
-                        viewport: viewport
-                    };
-                    page.render(renderContext).promise.then(function() {
-                        var pdfViewer = document.getElementById('pdf-viewer');
-                        pdfViewer.innerHTML = ''; // Clear previous PDF
-                        pdfViewer.appendChild(canvas);
-                    });
+        function renderPage(num) {
+            pageRendering = true;
+            pdfDoc.getPage(num).then(function(page) {
+                var viewport = page.getViewport({ scale: scale });
+                canvas.height = viewport.height;
+                canvas.width = viewport.width;
+
+                var renderContext = {
+                    canvasContext: ctx,
+                    viewport: viewport
+                };
+                var renderTask = page.render(renderContext);
+
+                renderTask.promise.then(function() {
+                    pageRendering = false;
+                    if (pageNumPending !== null) {
+                        renderPage(pageNumPending);
+                        pageNumPending = null;
+                    }
                 });
+            });
+
+            document.getElementById('page-num').textContent = num;
+        }
+
+        function queueRenderPage(num) {
+            if (pageRendering) {
+                pageNumPending = num;
+            } else {
+                renderPage(num);
+            }
+        }
+
+        function onPrevPage() {
+            if (pageNum <= 1) {
+                return;
+            }
+            pageNum--;
+            queueRenderPage(pageNum);
+        }
+
+        function onNextPage() {
+            if (pageNum >= pdfDoc.numPages) {
+                return;
+            }
+            pageNum++;
+            queueRenderPage(pageNum);
+        }
+
+        function onGoToPage() {
+            var pageNumber = parseInt(document.getElementById('page-input').value);
+            if (pageNumber >= 1 && pageNumber <= pdfDoc.numPages) {
+                pageNum = pageNumber;
+                queueRenderPage(pageNum);
+            } else {
+                alert("Invalid page number");
+            }
+        }
+
+        document.getElementById('prev-page').addEventListener('click', onPrevPage);
+        document.getElementById('next-page').addEventListener('click', onNextPage);
+        document.getElementById('go-to-page').addEventListener('click', onGoToPage);
+
+        function loadPDF(url) {
+            pdfjsLib.getDocument(url).promise.then(function(pdfDoc_) {
+                pdfDoc = pdfDoc_;
+                document.getElementById('page-count').textContent = pdfDoc.numPages;
+                renderPage(pageNum);
             });
         }
     </script>
