--- a/bioresonancebook/index.html
+++ b/bioresonancebook/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Secure PDF Viewer</title>
+    <title>Bioresonance Book Paul van Maaren</title>
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
