--- a/bioresonancebook/index.html
+++ b/bioresonancebook/index.html
@@ -220,7 +220,7 @@
                         alert("You are not authorized to view this document.");
                     }
                 } else {
-                    alert("User document not found.");
+                    alert("User document not found or you didn't buy the book, contact at info@emolio.nl");
                 }
             }).catch(function(error) {
                 console.error("Error getting document:", error);
