--- a/bioresonancebook/index.html
+++ b/bioresonancebook/index.html
@@ -41,6 +41,7 @@
         .navbar-brand img {
             height: 40px;
         }
+        
     </style>
 </head>
 <body>
@@ -55,6 +56,17 @@
     <div class="container mt-5">
         <h1>Bioresonance Book Paul van Maaren</h1>
         <div id="auth-section">
+            <div class="video-contact-container">
+                <div class="video-container">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/6bMeMfYVev4" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="contact-container">
+                    <p>Wil je boek kopen? Neem contact met <a href="mailto:info@emolio.nl">info@emolio.nl</a></p>
+                    <a href="mailto:info@emolio.nl" class="btn btn-info">Contact: info@emolio.nl</a>
+                </div>
+            </div>
             <div id="login-form" class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" id="email" placeholder="Enter email">
